# libcmatrix

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  HACKING.md  NEWS  README.md  leak-suppress.txt  meson.build  meson_options.txt
.github/workflows/: pages.yml
debian/: changelog  control  copyright  libcmatrix-dev.install  libcmatrix-doc.docs  libcmatrix-doc.links  libcmatrix0u.shlibs  rules
doc/: build-howto.md  libcmatrix.toml.in  meson.build
examples/: meson.build  simple-client.c
src/: cm-client-private.h  cm-client.c  cm-client.h  cm-common.c  cm-common.h  cm-db-private.h  cm-db.c  cm-device-private.h  cm-device.c  cm-device.h  cm-enc-private.h  cm-enc.c  cm-enums.h  cm-input-stream-private.h  cm-input-stream.c  cm-matrix-private.h  cm-matrix.c  cm-matrix.h  cm-net-private.h  cm-net.c  cm-olm-private.h  cm-olm-sas-private.h  cm-olm-sas.c  cm-olm.c  cm-pusher.c  cm-pusher.h  cm-room-member-private.h  cm-room-member.c  cm-room-member.h  cm-room-message-private.h  cm-room-message.c  cm-room-message.h  cm-room-private.h  cm-room.c  cm-room.h  cm-secret-store-private.h  cm-secret-store.c  cm-types.h  cm-utils-private.h  cm-utils.c  (+4 more)
src/events/: cm-event-private.h  cm-event.c  cm-event.h  cm-room-event-list-private.h  cm-room-event-list.c  cm-room-event-private.h  cm-room-event.c  cm-room-event.h  cm-room-message-event-private.h  cm-room-message-event.c  cm-room-message-event.h  cm-verification-event-private.h  cm-verification-event.c  cm-verification-event.h
src/users/: cm-account.c  cm-account.h  cm-room-member-private.h  cm-room-member.c  cm-room-member.h  cm-user-list-private.h  cm-user-list.c  cm-user-private.h  cm-user.c  cm-user.h
tests/: client.c  cm-db.c  cm-enc.c  cm-utils.c  enc-chat.c  meson.build  pusher.c  room-member.c  room.c
tests/cm-db/: content-v0.sql  content-v1.sql  content-v2.sql  empty-v0.sql  empty-v1.sql  empty-v2.sql
